added show action and routers support

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,10 +44,10 @@
       <a href="#" class="delete">[delete]</a>
     </script>
 
-    <!-- Templates -->
     <script type="text/template" id="tweet-details-template">
-      <h2>{{ status }}</h2>
-      <h4>{{ author }}</h4>
+      <h2 class="status">{{ status }}</h2>
+      <h4 class="author">{{ author }}:</h4>
+      <a href="#" class="back">Back</a>
     </script>
   </body>
 </html>
